--- a/templates/cotton/sidebar/index.html
+++ b/templates/cotton/sidebar/index.html
@@ -169,17 +169,17 @@
             </a>
           </li>
 
-          <!-- Replications -->
+          <!-- Connectors -->
           <li>
-            <a class="group relative flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-800 rounded-lg hover:bg-gray-100 dark:hover:bg-neutral-700 dark:text-neutral-200 {% if request.resolver_match.url_name == 'replications_list' %}bg-gray-100 dark:bg-neutral-700{% endif %}"
-               href="{% url 'replications_list' %}">
+            <a class="group relative flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-800 rounded-lg hover:bg-gray-100 dark:hover:bg-neutral-700 dark:text-neutral-200 {% if request.resolver_match.url_name == 'connectors_list' %}bg-gray-100 dark:bg-neutral-700{% endif %}"
+               href="{% url 'connectors_list' %}">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="shrink-0 size-5">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4" />
+                <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 14.25h13.5m-13.5 0a3 3 0 0 1-3-3m3 3a3 3 0 1 0 0 6h13.5a3 3 0 1 0 0-6m-16.5-3a3 3 0 0 1 3-3h13.5a3 3 0 0 1 3 3m-19.5 0a4.5 4.5 0 0 1 .9-2.7L5.737 5.1a3.375 3.375 0 0 1 2.7-1.35h7.126c1.062 0 2.062.5 2.7 1.35l2.587 3.45a4.5 4.5 0 0 1 .9 2.7m0 0a3 3 0 0 1-3 3m0 3h.008v.008h-.008v-.008Zm0-6h.008v.008h-.008v-.008Zm-3 6h.008v.008h-.008v-.008Zm0-6h.008v.008h-.008v-.008Z" />
               </svg>
-              <span x-show="!collapsed" x-cloak>Replications</span>
+              <span x-show="!collapsed" x-cloak>Connectors</span>
 
               <div x-show="collapsed" x-cloak class="absolute left-full ml-2 px-2 py-1 bg-gray-900 text-white text-xs rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap pointer-events-none z-50 dark:bg-gray-700">
-                Replications
+                Connectors
               </div>
             </a>
           </li>
